# actix-starter-web-app

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2019-10-24-165151_create_users/: up.sql
src/: error.rs  main.rs  schema.rs
src/app/: mod.rs
src/app/controllers/user/: auth.rs
src/app/middleware/: jwt.rs
src/app/models/: user.rs
src/config/: db.rs  jwt.rs  mod.rs
src/routes/: mod.rs
