[package]
name = "miniapi"
version = "0.1.0"
authors = ["mehmetcan <sahinmcan@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.8"
actix-service = "0.4.2"
diesel = { version = "1.4.3", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8"
serde = "1.0.102"
serde_derive ="1.0.102"
serde_json = "1.0.41"
derive_more = "0.15.0"
futures = "0.1.29"
bcrypt = "0.6.1"
listenfd = "0.3.3"
env_logger = "0.7.1"
jsonwebtoken = "6.0.1"